Updated users and added better swagger doc
