# models/users.js
@@ -4,9 +4,7 @@ const userSchema = new mongoose.Schema({
   userId: String,
   firstName: String,
   lastName: String,
-  birthDate: Date,
   email: String,
-  phone: String,
   picture: String,
   age: Number,
   weight: Number,
